--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
       {% endif %}
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+      {% else %}
+        <a href="{{ site.home }}" class="btn">GitHub</a>
       {% endif %}
       {% for menu in site.menus %}
         <a href="{{ site.baseurl }}{{ menu.link }}" class="btn">{{ menu.text }}</a>
