Add GitHub metadata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="icon" type="image/png" href="{{ '/favicon.png' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/css/plus.css' | relative_url }}" />
   </head>
   <body>
     <header class="page-header" role="banner">
@@ -34,6 +36,16 @@
       {% for menu in site.menus %}
         <a href="{{ site.baseurl }}{{ menu.link }}" class="btn">{{ menu.text }}</a>
       {% endfor %}
+      {% unless star_project %}
+      {% assign proj_matches = site.github.public_repositories | where: "name", site.star_project %}
+      {% for project in proj_matches %}
+        <div id="fav">
+          <h2>{{ project.name }}</h2>
+          <a href="{{ project.html_url }}">GitHub Repository</a>
+          <p>{{ project.description }}</p>
+        </div>
+      {% endfor %}
+      {% endunless %}
     </header>
 
     <main id="content" class="main-content" role="main">
