--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,9 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if page.url != '/' %}
-        <a href="{{ site.baseurl }}" class="btn">Home</a>
+        <a href="{{ site.url }}" class="btn">Home</a>
       {% endif %}
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% else %}
-        <a href="{{ site.github.url }}" class="btn">GitHub</a>
-      {% endif %}
+      <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
       {% for menu in site.menus %}
         <a href="{{ site.baseurl }}{{ menu.link }}" class="btn">{{ menu.text }}</a>
       {% endfor %}
