--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }} Blog</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      <a href="{{ site.baseurl }}" class="btn">Home</a>
+      <a href="{{ site.url }}" class="btn">Home</a>
       <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
       {% for menu in site.menus %}
         <a href="{{ site.baseurl }}{{ menu.link }}" class="btn">{{ menu.text }}</a>
